# django_abstractions

./: Makefile  README.md  dev.requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
django_abstractions/: manager_abstractions.py  model_abstractions.py
example_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
example_project/test_integration/: conftest.py  test_logging.py
