[flake8]
ignore = E126,E127,E731,W605,W503,E501,E203,E231,
         CAC001 # too cmoplex
max-line-length = 170
exclude = venv, *env.py, .idea
max-mccabe-complexity = 5

[isort]
line_length = 170
combine_as_imports = true
known_first_party = tests
known_third_party = ujson
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
include_trailing_comma = true
multi_line_output = 3
skip = venv
lines_after_imports = 2
force_grid_wrap = 0
use_parentheses = True

[tool:pytest]
pep8maxlinelength = 170
DJANGO_SETTINGS_MODULE = example_project.settings
python_files = tests.py test_*.py *_tests.py
pep8ignore =
	*/migrations/*.py E501
	*tests.py W191 E501
	*/tests/fixtures.py E501
	*.py E131 E251 W503
	test* E501
	tests/* E501
markers =
	pep8: Check pep8
log_cli = 1
addopts = -p no:warnings -s -v -nauto


[coverage:run]
branch = False

[metadata]
name = django_abstractions
author = Ivan Valenkov (Riros)
author_email = ivanvalenkov@gmail.com
description = Django abstractions. Bicycles out of the box.
long_description = file: README.md
description_file = README.md
long_description_content_type = text/markdown
url = https://github.com/riros/django_abstractions


version = 0.0.9


[options]
;package_dir =
packages =
	django_abstractions
install_requires =
	django
	django-crum
	django-uuslug


[options.packages.find]
where = django_abstractions

[build-system]
requires = ["setuptools", "wheel", "django", "GitPython"]